[#3] feat : GC 로그 키기